--- a/public/admin/admin_header.html
+++ b/public/admin/admin_header.html
@@ -2,88 +2,97 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Header</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Admin Header - Alternative Responsive Navbar</title>
+  <!-- Bootstrap CSS and FontAwesome -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
   <style>
-    :root { --header-height: 50px; }
+    /* Custom styles for admin header */
     .admin-header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: var(--header-height);
-      background: #fff;
-      color: #333;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 12px;
-      z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      background-color: #fff;
       border-bottom: 1px solid #ddd;
-      font-size: 0.9rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-    .admin-header .left-section {
-      display: flex;
-      align-items: center;
-    }
-    .hamburger {
-      font-size: 1.5rem;
-      cursor: pointer;
-      margin-right: 8px;
-      color: #333;
-    }
-    .page-title {
-      font-size: 1.1rem;
+    .admin-header .navbar-brand {
+      font-size: 1.2rem;
       font-weight: bold;
       color: #333;
     }
-    .admin-header .actions button {
-      background: #007bff;
-      border: none;
-      padding: 4px 8px;
-      border-radius: 4px;
-      color: #fff;
-      cursor: pointer;
-      margin-left: 8px;
-      transition: background 0.3s;
-      font-size: 0.85rem;
+    .admin-header .nav-link {
+      color: #333 !important;
+      font-size: 0.9rem;
     }
-    .admin-header .actions button:hover { background: #0056b3; }
+    .admin-header .navbar-toggler {
+      border: none;
+    }
+    .admin-header .navbar-toggler:focus {
+      outline: none;
+      box-shadow: none;
+    }
+    /* Optional: Add spacing between nav items on mobile */
+    @media (max-width: 576px) {
+      .admin-header .navbar-nav .nav-item {
+        margin-bottom: 8px;
+      }
+    }
   </style>
 </head>
 <body>
-  <header class="admin-header">
-    <div class="left-section">
-      <span class="hamburger" id="hamburger"><i class="fas fa-bars"></i></span>
-      <span class="page-title">Admin Master</span>
+  <!-- Using Bootstrap Navbar for Responsive Header -->
+  <nav class="navbar navbar-expand-sm admin-header fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Admin Master</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#adminNavbar"
+        aria-controls="adminNavbar"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+      </button>
+      <div class="collapse navbar-collapse" id="adminNavbar">
+        <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+          <li class="nav-item">
+            <a class="nav-link" href="admin_dashboard.html">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="home_admin.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="header_admin.html">Header</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ecommerce_admin.html">Shop</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="details_admin.html">Details</a>
+          </li>
+          <!-- Add additional nav items as needed -->
+        </ul>
+        <div class="d-flex">
+          <button class="btn btn-primary" onclick="logout()">Logout</button>
+        </div>
+      </div>
     </div>
-    <div class="actions">
-      <button onclick="logout()">Logout</button>
-    </div>
-  </header>
+  </nav>
   
+  <!-- Bootstrap JS Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Hamburger toggle for sidebar
-    document.addEventListener("DOMContentLoaded", function() {
-      const hamburger = document.getElementById("hamburger");
-      // The sidebar and overlay elements must exist in the parent document
-      const sidebar = document.getElementById("sidebar");
-      const overlay = document.getElementById("overlay");
-      if (hamburger && sidebar && overlay) {
-        hamburger.addEventListener("click", () => {
-          sidebar.classList.toggle("open");
-          overlay.classList.toggle("show");
-        });
-        overlay.addEventListener("click", () => {
-          sidebar.classList.remove("open");
-          overlay.classList.remove("show");
-        });
-      } else {
-        console.error("Hamburger, sidebar, or overlay not found in parent document.");
-      }
-    });
+    function logout() {
+      alert("Logging out...");
+      // Implement actual logout logic here.
+    }
   </script>
 </body>
 </html>
