--- a/public/admin/admin_header.html
+++ b/public/admin/admin_header.html
@@ -1,98 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Admin Header - Alternative Responsive Navbar</title>
-  <!-- Bootstrap CSS and FontAwesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
-  <style>
-    /* Custom styles for admin header */
-    .admin-header {
-      background-color: #fff;
-      border-bottom: 1px solid #ddd;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .admin-header .navbar-brand {
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #333;
-    }
-    .admin-header .nav-link {
-      color: #333 !important;
-      font-size: 0.9rem;
-    }
-    .admin-header .navbar-toggler {
-      border: none;
-    }
-    .admin-header .navbar-toggler:focus {
-      outline: none;
-      box-shadow: none;
-    }
-    /* Optional: Add spacing between nav items on mobile */
-    @media (max-width: 576px) {
-      .admin-header .navbar-nav .nav-item {
-        margin-bottom: 8px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <!-- Using Bootstrap Navbar for Responsive Header -->
-  <nav class="navbar navbar-expand-sm admin-header fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Admin Master</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#adminNavbar"
-        aria-controls="adminNavbar"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="adminNavbar">
-        <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-          <li class="nav-item">
-            <a class="nav-link" href="admin_dashboard.html">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="home_admin.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="header_admin.html">Header</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ecommerce_admin.html">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="details_admin.html">Details</a>
-          </li>
-          <!-- Add additional nav items as needed -->
-        </ul>
-        <div class="d-flex">
-          <button class="btn btn-primary" onclick="logout()">Logout</button>
-        </div>
-      </div>
-    </div>
-  </nav>
-  
-  <!-- Bootstrap JS Bundle (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function logout() {
-      alert("Logging out...");
-      // Implement actual logout logic here.
-    }
-  </script>
-</body>
-</html>
+<header class="admin-header">
+  <span class="hamburger" onclick="toggleSidebar()"><i class="fas fa-bars"></i></span>
+  <span class="page-title">Admin Panel</span>
+  <div class="actions"><button onclick="logout()">Logout</button></div>
+</header>
