--- a/public/admin/admin_header.html
+++ b/public/admin/admin_header.html
@@ -1,5 +1,66 @@
-<header class="admin-header">
-  <span class="hamburger" onclick="toggleSidebar()"><i class="fas fa-bars"></i></span>
-  <span class="page-title">Admin Panel</span>
-  <div class="actions"><button onclick="logout()">Logout</button></div>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Header</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <style>
+    :root { --header-height: 50px; }
+    .admin-header {
+      width: 100%;
+      height: var(--header-height);
+      background: #fff;
+      color: #333;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 12px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      border-bottom: 1px solid #ddd;
+      font-size: 0.9rem;
+    }
+    .admin-header .left-section {
+      display: flex;
+      align-items: center;
+    }
+    .hamburger {
+      font-size: 1.5rem;
+      cursor: pointer;
+      margin-right: 8px;
+      color: #333;
+    }
+    .page-title {
+      font-size: 1.1rem;
+      font-weight: bold;
+      color: #333;
+    }
+    .admin-header .actions button {
+      background: #007bff;
+      border: none;
+      padding: 4px 8px;
+      border-radius: 4px;
+      color: #fff;
+      cursor: pointer;
+      margin-left: 8px;
+      transition: background 0.3s;
+      font-size: 0.85rem;
+    }
+    .admin-header .actions button:hover {
+      background: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <header class="admin-header">
+    <div class="left-section">
+      <!-- Note: The hamburger toggle functionality will be attached in the parent page -->
+      <span class="hamburger" id="hamburger"><i class="fas fa-bars"></i></span>
+      <span class="page-title">Admin Master</span>
+    </div>
+    <div class="actions">
+      <button onclick="logout()">Logout</button>
+    </div>
+  </header>
+</body>
+</html>
