--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -6,7 +6,9 @@
   <title>Admin Footer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    :root { --footer-height: 65px; }
+    :root {
+      --footer-height: 65px;
+    }
     .footer-container {
       width: 100%;
       height: var(--footer-height);
@@ -16,6 +18,7 @@
       align-items: center;
       padding: 0 5px;
       box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
+      z-index: 1000;
     }
     .scroll-btn {
       background: #ddd;
@@ -37,10 +40,12 @@
       justify-content: space-evenly;
       gap: 12px;
     }
-    .footer-scroll::-webkit-scrollbar { display: none; }
+    .footer-scroll::-webkit-scrollbar {
+      display: none;
+    }
     .admin-footer a {
       display: inline-flex;
-      flex-direction: column; /* Icon on top, text below */
+      flex-direction: column; /* Icon above, text below */
       align-items: center;
       gap: 3px;
       color: #333;
