--- a/public/admin/admin_header.html
+++ b/public/admin/admin_header.html
@@ -6,7 +6,9 @@
   <title>Admin Header</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    :root { --header-height: 50px; }
+    :root {
+      --header-height: 50px;
+    }
     .admin-header {
       width: 100%;
       height: var(--header-height);
@@ -54,7 +56,6 @@
 <body>
   <header class="admin-header">
     <div class="left-section">
-      <!-- Note: The hamburger toggle functionality will be attached in the parent page -->
       <span class="hamburger" id="hamburger"><i class="fas fa-bars"></i></span>
       <span class="page-title">Admin Master</span>
     </div>
