--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -6,10 +6,11 @@
   <title>Admin Footer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    :root {
-      --footer-height: 65px;
-    }
+    :root { --footer-height: 65px; }
     .footer-container {
+      position: fixed;
+      bottom: 0;
+      left: 0;
       width: 100%;
       height: var(--footer-height);
       background: #fff;
@@ -40,12 +41,10 @@
       justify-content: space-evenly;
       gap: 12px;
     }
-    .footer-scroll::-webkit-scrollbar {
-      display: none;
-    }
+    .footer-scroll::-webkit-scrollbar { display: none; }
     .admin-footer a {
       display: inline-flex;
-      flex-direction: column; /* Icon above, text below */
+      flex-direction: column; /* Icon on top, text below */
       align-items: center;
       gap: 3px;
       color: #333;
