--- a/public/admin/admin_header.html
+++ b/public/admin/admin_header.html
@@ -24,8 +24,8 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       z-index: 1000;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
       padding: 0 12px;
       font-size: 0.9rem;
     }
@@ -57,30 +57,32 @@
     .admin-header .actions button:hover {
       background: #0056b3;
     }
-    /* Mobile drop-down menu */
-    .mobile-menu {
+    
+    /* Mobile drop-down navigation menu */
+    .mobile-nav {
       display: none;
       flex-direction: column;
       background: var(--nav-bg);
       width: 100%;
-      position: absolute;
+      position: fixed;
       top: var(--header-height);
       left: 0;
       z-index: 999;
     }
-    .mobile-menu a {
-      padding: 10px;
+    .mobile-nav a {
       color: #fff;
+      padding: 10px;
       border-top: 1px solid rgba(255,255,255,0.3);
       text-align: center;
       font-size: 0.95rem;
     }
-    /* Show mobile menu on small screens */
-    @media (max-width: 576px) {
-      .mobile-menu { display: none; }
-      .mobile-menu.open { display: flex; }
+    .mobile-nav.open { display: flex; }
+    
+    /* Show hamburger only on mobile */
+    @media (min-width: 577px) {
+      .hamburger { display: none; }
+      .mobile-nav { display: none !important; }
     }
-    /* On larger screens, you may include a horizontal nav if desired (not shown here) */
   </style>
 </head>
 <body>
@@ -93,8 +95,9 @@
       <button onclick="logout()">Logout</button>
     </div>
   </header>
-  <!-- Mobile drop-down menu -->
-  <div class="mobile-menu" id="mobileMenu">
+  
+  <!-- Mobile drop-down navigation menu -->
+  <nav class="mobile-nav" id="mobileNav">
     <a href="admin_dashboard.html">Dashboard</a>
     <a href="home_admin.html">Home</a>
     <a href="header_admin.html">Header</a>
@@ -107,18 +110,19 @@
     <a href="contact_admin.html">Contact</a>
     <a href="analytics_admin.html">Analytics</a>
     <a href="about_admin.html">About</a>
-  </div>
+  </nav>
+  
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       const hamburger = document.getElementById("hamburger");
-      const mobileMenu = document.getElementById("mobileMenu");
-      hamburger.addEventListener("click", () => {
-        mobileMenu.classList.toggle("open");
+      const mobileNav = document.getElementById("mobileNav");
+      hamburger.addEventListener("click", function() {
+        mobileNav.classList.toggle("open");
       });
+      window.logout = function() {
+        alert("Logging out...");
+      }
     });
-    function logout() {
-      alert("Logging out...");
-    }
   </script>
 </body>
 </html>
