--- a/public/admin/admin_header.html
+++ b/public/admin/admin_header.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Header</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     :root {
       --header-height: 50px;
@@ -14,6 +14,9 @@
     }
     /* Header container */
     .admin-header {
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
       height: var(--header-height);
       background: var(--bg-white);
@@ -54,28 +57,35 @@
     .admin-header .actions button:hover {
       background: #0056b3;
     }
-    /* Mobile drop-down menu */
+
+    /* Compact drop-down overlay menu */
     .mobile-nav {
-      display: none;
-      flex-direction: column;
-      background: var(--nav-bg);
-      width: 100%;
-      position: fixed;
+      position: absolute;
       top: var(--header-height);
       left: 0;
-      z-index: 999;
-    }
-    .mobile-nav a {
-      padding: 10px;
-      color: #fff;
-      border-top: 1px solid rgba(255,255,255,0.3);
-      text-align: center;
-      font-size: 0.95rem;
+      width: 180px; /* fixed width overlay */
+      background: var(--nav-bg);
+      border: 1px solid rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      display: none;
+      flex-direction: column;
+      z-index: 2000;
     }
     .mobile-nav.open {
       display: flex;
     }
-    /* Show hamburger only on mobile */
+    .mobile-nav a {
+      color: #fff;
+      padding: 10px;
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      text-align: left;
+      font-size: 0.9rem;
+    }
+    .mobile-nav a:hover {
+      background: rgba(255,255,255,0.1);
+    }
+
+    /* Show hamburger only on mobile; hide on larger screens */
     @media (min-width: 577px) {
       .hamburger { display: none; }
       .mobile-nav { display: none !important; }
@@ -92,7 +102,8 @@
       <button onclick="logout()">Logout</button>
     </div>
   </header>
-  <!-- Mobile drop-down menu -->
+
+  <!-- Compact drop-down overlay menu -->
   <nav class="mobile-nav" id="mobileNav">
     <a href="admin_dashboard.html">Dashboard</a>
     <a href="home_admin.html">Home</a>
@@ -107,8 +118,10 @@
     <a href="analytics_admin.html">Analytics</a>
     <a href="about_admin.html">About</a>
   </nav>
+
   <script>
-    // Note: No event listener here – we will attach it in the main page.
+    // We'll attach the event listener in the main page, or you can do it here:
+    // But if you load this via fetch() and insert as innerHTML, scripts won't auto-run
     function logout() {
       alert("Logging out...");
     }
