--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -44,7 +44,7 @@
     .footer-scroll::-webkit-scrollbar { display: none; }
     .admin-footer a {
       display: inline-flex;
-      flex-direction: column; /* Icon above, text below */
+      flex-direction: column;
       align-items: center;
       gap: 3px;
       color: #333;
@@ -113,7 +113,6 @@
     </div>
     <button class="scroll-btn right" id="scrollRight"><i class="fas fa-angle-double-right"></i></button>
   </footer>
-  
   <script>
     const footerScroll = document.getElementById("footerScroll");
     const scrollLeftBtn = document.getElementById("scrollLeft");
