--- a/public/admin/admin_footer.html
+++ b/public/admin/admin_footer.html
@@ -44,7 +44,7 @@
     .footer-scroll::-webkit-scrollbar { display: none; }
     .admin-footer a {
       display: inline-flex;
-      flex-direction: column;
+      flex-direction: column;  /* icon above, text below */
       align-items: center;
       gap: 3px;
       color: #333;
